--- a/orbit-launcher-elite/manifest.json
+++ b/orbit-launcher-elite/manifest.json
@@ -15,7 +15,7 @@
     "default_icon": "icon.png",
     "default_popup": "popup.html"
   },
-  "permissions": ["activeTab", "storage", "geolocation", "contextMenus"],
+  "permissions": ["activeTab", "storage", "geolocation", "contextMenus", "https://fcc-weather-api.glitch.me"],
   "background": {
     "scripts": ["background.js"]
   },
